Fix More in this section cutoff

--- a/src/applications/static-pages/sass/modules/_m-education-wizard.scss
+++ b/src/applications/static-pages/sass/modules/_m-education-wizard.scss
@@ -44,3 +44,9 @@
 .wizard-alert-heading {
   padding: 0;
 }
+
+.wizard-fieldset {
+  input[type="checkbox"], input[type="radio"] {
+    margin-left: -4rem;
+  }
+}
